# relational-policy-indicators

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
data/metadata/: COLUMN_DICTIONARY.csv  DATA_DICTIONARY.csv  africa_country_frame.json  country_three_layer_positions_data_dictionary.csv  openalex_query_specification.json  openalex_source_manifest.json  phase2b_source_manifest.json  rec_source_register.json
data/processed/: a55_complete_dyads_with_observation_flags.csv  a55_country_three_layer_positions.csv  a55_coverage_selection_diagnostics.csv  a55_observability_status.csv  a55_openalex_country_period_summary.csv  a55_rec_membership_snapshot.csv  c38_continuous_estimation_dyads.csv  c38_primary_model_dyads.csv  c39_multiplex_dyads.csv  c39_regional_null_inputs.json  t1b_primary_risk_set.csv  t1b_risk_set_2024_attrition.csv  temporal_deepening_cohort_rates.csv  temporal_formation_cohort_rates.csv
data/schemas/: observation_state_contract.json
docs/: File_Authority_Hierarchy.md  GITHUB_PUBLICATION_VERIFICATION.md  PORTABILITY_CORRECTIONS.md  PRE_PUBLICATION_GITHUB_AUDIT.md  PUBLIC_REPOSITORY_INVENTORY.md
docs/methodology/: CLAIM_MEASURE_ALIGNMENT_v1.3.csv  DSP_MRQAP_SCALING_VERIFICATION_v1.3.csv  FIXED_DEGREE_ENSEMBLE_VERIFICATION_v1.3.json  GATE_A_UNCERTAINTY_v1.3.csv  METHODOLOGICAL_AUDIT_IMPLEMENTATION.md  METHODOLOGICAL_AUDIT_TEST_RESULTS.csv  (+5 more)
manuscript/: Full_Manuscript_v1.3.2.md
replication/: README.md  execution_order.md
tests/: test_replication_contracts.py
(+52 files in other folders)
